fixed overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,7 @@ html {
   font-family: var(--ff-main);
   font-size: 10px;
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 body {
